--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ linting:
 
 test:
   stage: test
+  image: python:3.7
   variables:
     PYTHONPATH: $PWD:$PYTHONPATH
   before_script:
@@ -22,6 +23,7 @@ test:
 
 security:
   stage: test
+  image: python:3.7-slim
   allow_failure: true
   before_script:
   - pip install safety
