--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,24 @@
 repos:
--   repo: https://github.com/ambv/black
+  - repo: https://github.com/ambv/black
     rev: 18.9b0
     hooks:
-    - id: black
-      language_version: python3.7
--   repo: https://github.com/pre-commit/pre-commit-hooks
+      - id: black
+        language_version: python3.7
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.0.0
     hooks:
-    - id: flake8
-      exclude: misc
-      additional_dependencies: [
-        'flake8==3.6.0',
-        'flake8-builtins==1.4.1',
-        'flake8-bugbear==18.8.0',
-      ]
--   repo: https://github.com/KPilnacek/mirrors-bandit
+      - id: flake8
+        exclude: misc
+        additional_dependencies: [
+          'flake8==3.6.0',
+          'flake8-builtins==1.4.1',
+          'flake8-bugbear==18.8.0',
+        ]
+  - repo: https://github.com/KPilnacek/mirrors-bandit
     rev: v1.5.1
     hooks:
-    -   id: bandit
+      - id: bandit
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.641
+    hooks:
+      - id: mypy
