--- a/installer.cfg
+++ b/installer.cfg
@@ -23,6 +23,7 @@ pypi_wheels = certifi==2018.11.29
     six==1.12.0
     urllib3==1.24.1
     xlrd==1.2.0
+packages = tabulate
 
 files = LICENSE
     README.md
