--- a/installer.cfg
+++ b/installer.cfg
@@ -24,6 +24,7 @@ pypi_wheels = certifi==2018.11.29
     urllib3==1.24.1
     xlrd==1.2.0
 packages = tabulate
+    jsondiff
 
 files = LICENSE
     README.md
