--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,24 @@ language: python
 branches:
   only:
   - master
+  - nsis-tabulate
   - /^v\d+\.\d+\.\d+$/
 
 cache: pip
 jobs:
   fast_finish: true
   include:
-    - python: 3.7
-      env: TOXENV=linting TOXCFG=tox.ini
-      stage: test
-
-    - python: 3.7
-      env: TOXENV=py37 TOXCFG=tox.ini
-      stage: test
-
-    - python: 3.7-dev
-      env: TOXENV=py37-dev TOXCFG=tox.ini
-      stage: test
+#    - python: 3.7
+#      env: TOXENV=linting TOXCFG=tox.ini
+#      stage: test
+#
+#    - python: 3.7
+#      env: TOXENV=py37 TOXCFG=tox.ini
+#      stage: test
+#
+#    - python: 3.7-dev
+#      env: TOXENV=py37-dev TOXCFG=tox.ini
+#      stage: test
 
     - stage: deploy
       python: 3.7
@@ -46,15 +47,15 @@ jobs:
         on:
           tags: true
 
-    - stage: deploy
-      script: skip
-      python: 3.7
-      deploy:
-        provider: pypi
-        user: rossum
-        password: ${PYPI_DEPLOY_PASSWORD}
-        on:
-          tags: true
+#    - stage: deploy
+#      script: skip
+#      python: 3.7
+#      deploy:
+#        provider: pypi
+#        user: rossum
+#        password: ${PYPI_DEPLOY_PASSWORD}
+#        on:
+#          tags: true
 
 
 install:
