Add __version__ to __init__

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,8 @@ current_version = 1.0.0
 commit = True
 tag = True
 
+[bumpversion:file:elisctl/__init__.py]
+
 [bumpversion:file:setup.py]
 
 [bumpversion:file:installer.cfg]
