--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,10 @@ jobs:
       env: TOXENV=py37 TOXCFG=tox.ini
       stage: test
 
+    - python: 3.6
+      env: TOXENV=py36 TOXCFG=tox.ini
+      stage: test
+
     - python: 3.7-dev
       env: TOXENV=py37-dev TOXCFG=tox.ini
       stage: test
