--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,10 +4,17 @@ commit = True
 tag = True
 
 [bumpversion:file:elisctl/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:installer.cfg]
+search = version={current_version}
+replace = version={new_version}
 
 [bumpversion:file:.travis.yml]
-
+search = elisctl_{current_version}
+replace = elisctl_{new_version}
