--- a/installer.cfg
+++ b/installer.cfg
@@ -25,6 +25,7 @@ pypi_wheels = certifi==2018.11.29
     xlrd==1.2.0
 packages = tabulate
     jsondiff
+    openpyxl
 
 files = LICENSE
     README.md
