Install openpyxl dependencies for Windows build

--- a/installer.cfg
+++ b/installer.cfg
@@ -14,6 +14,7 @@ pypi_wheels = certifi==2018.11.29
     Click==7.0
     click-shell==1.0
     idna==2.8
+    jdcal==1.4
     numpy==1.16.1
     pandas==0.24.1
     pip==19.0.1
@@ -26,6 +27,7 @@ pypi_wheels = certifi==2018.11.29
 packages = tabulate
     jsondiff
     openpyxl
+    et_xmlfile
 
 files = LICENSE
     README.md
