--- a/installer.cfg
+++ b/installer.cfg
@@ -1,7 +1,7 @@
 [Application]
 name=elisctl
 version=2.0.0
-entry_point=elisctl:entry_point
+entry_point=elisctl.main:entry_point
 console=true
 
 [Python]
