--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,25 @@
 repos:
   - repo: https://github.com/ambv/black
-    rev: 18.9b0
+    rev: 19.3b0
     hooks:
       - id: black
         language_version: python3.7
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v2.2.3
     hooks:
       - id: flake8
         exclude: misc
         additional_dependencies: [
-          'flake8==3.6.0',
+          'flake8==3.7.7',
           'flake8-builtins==1.4.1',
-          'flake8-bugbear==18.8.0',
+          'flake8-bugbear==19.3.0',
         ]
-  - repo: https://github.com/KPilnacek/mirrors-bandit
-    rev: v1.5.1
+  - repo: https://github.com/pycqa/bandit
+    rev: 1.6.0
     hooks:
       - id: bandit
+        args: [-lll]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.670
+    rev: v0.701
     hooks:
       - id: mypy
