--- a/installer.cfg
+++ b/installer.cfg
@@ -1,6 +1,6 @@
 [Application]
 name=elisctl
-version=2.3.0
+version=2.3.1
 entry_point=elisctl.main:entry_point
 console=true
 
@@ -9,14 +9,16 @@ version=3.7.3
 bitness=64
 
 [Include]
-pypi_wheels = certifi==2019.3.9
+pypi_wheels = certifi==2019.6.16
     chardet==3.0.4
     Click==7.0
     click-shell==1.0
     idna==2.8
     jdcal==1.4.1
+    jmespath==0.9.4
     numpy==1.16.4
     pandas==0.24.2
+    polling2==0.4.3
     python-dateutil==2.8.0
     pytz==2019.1
     requests==2.22.0
