--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,6 @@ repos:
     rev: v0.701
     hooks:
       - id: mypy
+        # mypy v0.701 fails to build on python3.8 https://github.com/python/typed_ast/issues/124
+        # FIXME: remove language version with mypy v0.761
+        language_version: python3.7
