:snake: fix python3.8 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ jobs:
       env: TOXENV=linting TOXCFG=tox.ini
       stage: test
 
+    - python: 3.8
+      env: TOXENV=py38 TOXCFG=tox.ini
+      stage: test
+
     - python: 3.7
       env: TOXENV=py37 TOXCFG=tox.ini
       stage: test
