--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py37-dev, linting
+envlist = py36, py37, py38, linting
 skip_missing_interpreters = true
 
 [testenv]
