--- a/installer.cfg
+++ b/installer.cfg
@@ -1,7 +1,7 @@
 [Application]
-name=elisctl
+name=rossumctl
 version=2.10.0
-entry_point=elisctl.main:entry_point
+entry_point=rossumctl.main:entry_point
 console=true
 
 [Python]
@@ -33,5 +33,5 @@ packages = tabulate
 files = LICENSE
     README.md
 
-[Command elisctl]
-entry_point=elisctl.main:entry_point
+[Command rossumctl]
+entry_point=rossumctl.main:entry_point
