--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 2.10.2
 commit = True
 tag = True
 
-[bumpversion:file:rossumctl/__init__.py]
+[bumpversion:file:elisctl/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
@@ -16,5 +16,5 @@ search = version={current_version}
 replace = version={new_version}
 
 [bumpversion:file:.travis.yml]
-search = rossumctl_{current_version}
-replace = rossumctl_{new_version}
+search = elisctl_{current_version}
+replace = elisctl_{new_version}
