Add legacy project information

--- a/installer.cfg
+++ b/installer.cfg
@@ -9,26 +9,7 @@ version=3.7.3
 bitness=64
 
 [Include]
-pypi_wheels = certifi==2019.6.16
-    chardet==3.0.4
-    Click==7.0
-    click-shell==1.0
-    idna==2.8
-    jdcal==1.4.1
-    jmespath==0.9.4
-    numpy==1.16.4
-    pandas==0.24.2
-    polling2==0.4.3
-    python-dateutil==2.8.0
-    pytz==2019.1
-    requests==2.22.0
-    six==1.12.0
-    urllib3==1.25.3
-    xlrd==1.2.0
-packages = tabulate
-    jsondiff
-    openpyxl
-    et_xmlfile
+packages = rossum
 
 files = LICENSE
     README.md
